Finally fixed alignment issues, the right way.

--- a/dev/sass/particles/_general.scss
+++ b/dev/sass/particles/_general.scss
@@ -1,122 +1,131 @@
 @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
 
-#user-alert {
-  padding: 20px;
+#user-alert-wrap {
   position: fixed;
-  left: 26%;
-  top: 30%;
-  background-color: white;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  -webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  -moz-box-shadow: 0 10px 20px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  @include border-radius(5px);
-  @include font-size(14);
-  color: $gray;
-  z-index: 100;
-  width: 55%;
-  max-width: 650px !important;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  padding-top: 15%;
   @include transition(opacity, 200ms, ease-in-out);
   opacity: 1;
   &.hide {
     opacity: 0;
     @include transition(opacity, 200ms, ease-in-out);
   }
-  i { @include font-size(26); }
-
-  .close {
+  #user-alert {
+    box-sizing: border-box;
+    padding: 20px;
+    position: relative;
+    margin: auto;
+    background-color: white;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    -webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    -moz-box-shadow: 0 10px 20px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    @include border-radius(5px);
+    @include font-size(14);
     color: $gray;
-    position: absolute;
-    top: 13px;
-    right: 13px;
-    height: 45px !important;
-    width: 45px;
-    padding: 0;
-    background: white;
-    z-index: 200;
-    cursor: pointer;
-    @include transition(color, 200ms, ease-in-out);
-    &:hover {
-      color: $secondary;
-    }
-  }
+    z-index: 100;
+    width: 55%;
+    max-width: 650px !important;
+    i { @include font-size(26); }
 
-  .user-message-container {
-    display: block;
-    width: 100%;
-    > .user-alert-icon, .message-text-container {
-      display: inline-block;
-      height: 100%;
-      vertical-align: middle;
-      &:last-child { padding-left: 0; }
+    .close {
+      color: $gray;
+      position: absolute;
+      top: 0px;
+      right: 0px;
+      height: 45px !important;
+      width: 45px;
+      padding: 0;
+      background: white;
+      z-index: 200;
+      cursor: pointer;
+      @include transition(color, 200ms, ease-in-out);
+      &:hover {
+        color: $secondary;
+      }
     }
-    .user-alert-icon {
-      width: 17%;
-      text-align: left;
-      i {
-        @include font-size(60);
+
+    .user-message-container {
+      display: block;
+      position: relative;
+      width: 100%;
+      > .user-alert-icon, .message-text-container {
+        display: inline-block;
+        height: 100%;
         vertical-align: middle;
-        margin: -6%;
+        &:last-child { padding-left: 0; }
       }
-    }
-    .message-text-container {
-      width: 75%;
-    }
-  }
-
-  .user-alert-footer {
-    text-align: right;
-    margin-top: 20px;
-    .btn-wrapper {
-      width: 30%;
-      min-width: 125px;
-      display: inline-block;
-      .btn {
-        width: 90%;
-        height: 50px;
-        border: none;
-        cursor: pointer;
-        color: white;
-        text-transform: uppercase;
-        font-weight: 500;
-        @include font-size(10);
-        @include border-radius(3px);
-        @include transition(background-color, 200ms, ease-in-out);
-        @include transition(box-shadow, 200ms, ease-in-out);
-        @include transition(-moz-box-shadow, 200ms, ease-in-out);
-        @include transition(-webkit-box-shadow, 200ms, ease-in-out);
-        &:focus {
-           outline: none;
+      .user-alert-icon {
+        width: 17%;
+        text-align: left;
+        i {
+          @include font-size(60);
+          vertical-align: middle;
+          margin: -6%;
         }
       }
+      .message-text-container {
+        width: 75%;
+      }
+    }
 
-      #btn-no {
-        background-color: $second-dark;
-        &:hover {
-          background-color: $secondary;
-          @include box-shadow($horizontal: 0px, $vertical: 1px, $blur: 3px, $color: $gray-darkest);
+    .user-alert-footer {
+      text-align: right;
+      margin-top: 20px;
+      .btn-wrapper {
+        width: 30%;
+        min-width: 125px;
+        display: inline-block;
+        .btn {
+          width: 90%;
+          height: 50px;
+          border: none;
+          cursor: pointer;
+          color: white;
+          text-transform: uppercase;
+          font-weight: 500;
+          @include font-size(10);
+          @include border-radius(3px);
+          @include transition(background-color, 200ms, ease-in-out);
+          @include transition(box-shadow, 200ms, ease-in-out);
+          @include transition(-moz-box-shadow, 200ms, ease-in-out);
+          @include transition(-webkit-box-shadow, 200ms, ease-in-out);
+          &:focus {
+             outline: none;
+          }
         }
-        &:focus {
-          background-color: $secondary;
-          @include box-shadow($horizontal: 0px, $vertical: 1px, $blur: 3px, $color: $gray-darkest);
+
+        #btn-no {
+          background-color: $second-dark;
           &:hover {
             background-color: $secondary;
             @include box-shadow($horizontal: 0px, $vertical: 1px, $blur: 3px, $color: $gray-darkest);
           }
+          &:focus {
+            background-color: $secondary;
+            @include box-shadow($horizontal: 0px, $vertical: 1px, $blur: 3px, $color: $gray-darkest);
+            &:hover {
+              background-color: $secondary;
+              @include box-shadow($horizontal: 0px, $vertical: 1px, $blur: 3px, $color: $gray-darkest);
+            }
+          }
         }
-      }
 
-      #btn-yes {
-        background-color: $primary-dark;
-         &:hover {
-          background-color: $primary;
-          @include box-shadow($horizontal: 0px, $vertical: 1px, $blur: 3px, $color: $gray-darkest);
-        }
-        &:focus {
-          background-color: $primary;
-          @include box-shadow($horizontal: 0px, $vertical: 1px, $blur: 3px, $color: $gray-darkest);
-          &:hover {
+        #btn-yes {
+          background-color: $primary-dark;
+           &:hover {
             background-color: $primary;
             @include box-shadow($horizontal: 0px, $vertical: 1px, $blur: 3px, $color: $gray-darkest);
+          }
+          &:focus {
+            background-color: $primary;
+            @include box-shadow($horizontal: 0px, $vertical: 1px, $blur: 3px, $color: $gray-darkest);
+            &:hover {
+              background-color: $primary;
+              @include box-shadow($horizontal: 0px, $vertical: 1px, $blur: 3px, $color: $gray-darkest);
+            }
           }
         }
       }
@@ -132,9 +141,6 @@
 .message-failure .user-alert-icon i { color:$danger; }
 
 @media(max-width: 440px) {
-  #user-alert {
-    left: 19%;
-  }
   .message-text-container {
     display: block !important;
     margin:auto;
@@ -154,26 +160,7 @@
 
 @media
 (-webkit-min-device-pixel-ratio: 2),
-(min-resolution: 192dpi), (min-width: 1400px) {
-  #user-alert {
-    left: 26%;
-  }
-}
-
-@media
-(-webkit-min-device-pixel-ratio: 2),
-(min-resolution: 192dpi), (max-width: 1400px) {
-  #user-alert {
-    left: 23%;
-  }
-}
-
-@media
-(-webkit-min-device-pixel-ratio: 2),
 (min-resolution: 192dpi), (max-width: 960px) {
-  #user-alert {
-    left: 19%;
-  }
   .message-text-container {
     display: block !important;
     margin:auto;
@@ -200,7 +187,6 @@
 (-webkit-min-device-pixel-ratio: 2),
 (min-resolution: 192dpi), (max-width: 475px) {
   #user-alert {
-    left: 17%;
     .user-message-container .message-text-container {
       width: 90%;
     }
